# GPhoto2Framework

./: .gitignore  README.md
GPhoto2Framework/GPhoto2Example/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  gphoto2-endian.h  main.m  ptp-private.h  ptp.h  ptp_old.h
GPhoto2Framework/GPhoto2Example/Base.lproj/: Main.storyboard
GPhoto2Framework/GPhoto2Example/gPhoto2 Button Test/: AppDelegate.h  AppDelegate.m  Config.c  Context.c  Context.h  Info.plist  ViewController.h  ViewController.m  main.m
GPhoto2Framework/GPhoto2Example/gPhoto2 Button Test/Base.lproj/: Main.storyboard
GPhoto2Framework/GPhoto2Example/gPhoto2 Button Test/SSDP/: SSDPService.h  SSDPService.m  SSDPServiceBrowser.h  SSDPServiceBrowser.m  SSDPServiceTypes.h  SSDPServiceTypes.m
GPhoto2Framework/GPhoto2Example/gPhoto2 Button Test/SSDP/CocoaAsyncSocket.framework/: CocoaAsyncSocket
GPhoto2Framework/GPhoto2Example/gPhoto2 Button Test/XPath/KissXML.framework/: Info.plist  KissXML
GPhoto2Framework/GPhoto2Example/gPhoto2 Button Test/XPath/KissXML.framework/Modules/: module.modulemap
GPhoto2Framework/GPhoto2Example/gPhoto2 Button Test/gphoto2.framework/: Info.plist
GPhoto2Framework/GPhoto2Example/gPhoto2 Button Test/gphoto2.framework/Modules/: module.modulemap
GPhoto2Framework/GPhoto2Framework/: GPhoto2Framework.h
GPhoto2Framework/GPhoto2Framework.xcodeproj/: project.pbxproj
GPhoto2Framework/GPhoto2Framework.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GPhoto2Framework/GPhoto2Framework.xcodeproj/project.xcworkspace/xcuserdata/hendrikh.xcuserdatad/: UserInterfaceState.xcuserstate
GPhoto2Framework/GPhoto2Framework.xcodeproj/xcuserdata/hendrikh.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
GPhoto2Framework/GPhoto2Framework.xcodeproj/xcuserdata/hendrikh.xcuserdatad/xcschemes/: GPhoto2Example.xcscheme  gphoto2.xcscheme  gphoto2_port.xcscheme  xcschememanagement.plist
GPhoto2Framework/curl/: curlbuild.h
GPhoto2Framework/libgphoto2/: libgphoto2.h
camlibs/ptp2/: library.c  ptpip.c
libgphoto2/: CMakeLists.txt  RELEASE-HOWTO.md  build.sh  config.h  gphoto2-abilities-list.c  gphoto2-camera.c  iconfigure
libgphoto2/camlibs/: all-def-camlibs
libgphoto2/camlibs/lumix/: lumix.c
libgphoto2/camlibs/ptp2/: chdk.c  config.c  fujiptpip.c  library.c  olympus-wrap.c  ptp-pack.c  ptp.c  ptp.h  ptpip.c
libgphoto2/doc/: Doxyfile  Doxyfile-internals
libgphoto2/examples/: best-iso  lunkwill-canon-capture  sample-afl  sample-autodetect  sample-capture  sample-justfocus  sample-multi-detect  sample-owner  sample-photobooth  sample-preview  sample-tether  sample-trigger-capture
libgphoto2/gphoto2/: gphoto2-library.h
libgphoto2/jni/: gphoto-jni.c
libgphoto2/libgphoto2/: gphoto2-abilities-list.c  gphoto2-camera.c  gphoto2-endian.h  gphoto2-filesys.c  gphoto2-setting.c  gphoto2-version.c
libgphoto2/libgphoto2_port/: config.h  gphoto2-port-config
libgphoto2/libgphoto2_port/libgphoto2_port/: gphoto2-port-info-list.c  gphoto2-port-version.c  gphoto2-port.c
libgphoto2/libgphoto2_port/po/: POTFILES  cs.po  da.po  de.po  es.po  fi.po  it.po  ja.po  libgphoto2_port-12.pot  nl.po  pl.po  pt_BR.po  sk.po  sr.po  uk.po  vi.po  zh_CN.po
libgphoto2/libgphoto2_port/test/: test-gp-port  test-port-list
libgphoto2/packaging/generic/: print-camera-list
libgphoto2/packaging/rpm/: package.spec
libgphoto2/po/: POTFILES  cs.po  da.po  es.po  fr.po  hu.po  it.po  libgphoto2-6.pot  nl.po  ru.po  sv.po  vi.po  zh_CN.po
libgphoto2/tests/: test-filesys  test-gphoto2
libgphoto2/tests/ddb/: check-ddb.sh
libgphoto2_port/libgphoto2_port/: gphoto2-port.c
libgphoto2_port/po/: eu.po  fr.po  ru.po  sv.po  zh_TW.po
po/: de.po  eu.po  it.po  ja.po  pl.po  ru.po  uk.po  zh_CN.po
(+1 files in other folders)
